# advent_of_code_2022

./: .gitignore  advent_of_code_2022.opam  day03.py  dune-project
src/: day01.ml  day01pt2.ml  day02.ml  day02pt2.ml  day03.ml  day03pt2.ml  day04.ml  day04pt2.ml  day05.ml  day05pt2.ml  day06.ml  day06pt2.ml  day07.ml  day07pt2.ml  day08.ml  day08pt2.ml  day09.ml  day09pt2.ml  day10.ml  day10pt2.ml  day11.ml  day11pt2.ml  day12.ml  day12pt2.ml  day13.ml  day13pt2.ml  day14.ml  day14pt2.ml  day15.ml  day15pt2.ml  day16.ml  day16pt2.ml  day17.ml  day17pt2.ml  day18.ml  day18pt2.ml  day19.ml  day19pt2.ml  day20.ml  day20pt2.ml  (+10 more)
