(lang dune 3.4)

(name advent_of_code_2022)

(generate_opam_files true)

(source
 (github vrama628/advent_of_code_2022))

(authors "Vijay Ramamurthy")

(package
 (name advent_of_code_2022)
 (synopsis "Advent of Code 2022")
 (depends ocaml dune core)
 (tags
  (topics "to describe" your project))
 (allow_empty))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
