(executables
 (names
  day01
  day01pt2
  day02
  day02pt2
  day03
  day03pt2
  day04
  day04pt2
  day05
  day05pt2
  day06
  day06pt2
  day07
  day07pt2
  day08
  day08pt2
  day09
  day09pt2
  day10
  day10pt2
  day11
  day11pt2
  day12
  day12pt2
  day13
  day13pt2
  day14
  day14pt2
  day15
  day15pt2
  day16
  day16pt2
  day17
  day17pt2
  day18
  day18pt2
  day19
  day20
  day20pt2
  day21
  day21pt2
  day22
  day22pt2
  day23
  day23pt2
  day24
  day24pt2
  day25)
 (libraries core zarith yojson)
 (preprocess
  (pps
   ppx_let
   ppx_deriving.ord
   ppx_sexp_conv
   ppx_enumerate
   ppx_deriving.show
   ppx_deriving.eq)))
